# fastapi-url-shortener

./: .gitignore  main.py  pyproject.toml  test.db
configs/: app_settings.py  database.py
metadata/: tags.py
models/: url.py
repositories/: url_repository.py
routers/: __init__.py  admin.py  root.py  url.py
schemas/: url_schemas.py
services/: admin_service.py  url_service.py
