[tool.poetry]
name = "url-shortener"
version = "0.1.0"
description = ""
authors = ["Anton Rysaj <arysaj@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.1"
uvicorn = "^0.30.3"
sqlalchemy = "^2.0.31"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
aiosqlite = "^0.20.0"
alembic = "^1.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
